testsuite/tests/patsyn/should_fail/T9161-2.stderr

T9161-2.hs:10:20: error:
    • Pattern synonym ‘PATTERN’ cannot be used here
        (pattern synonyms cannot be promoted)
    • In the first argument of ‘Proxy’, namely ‘PATTERN’
      In the type signature: wrongLift :: Proxy PATTERN ()
